# reason-tree-sitter

./: README.md  azure-pipelines.yml  bench.json  example.json  package.json  test.json
.ci/: esy-build-steps.yml  esy-check-hygiene.yml
bench/: FullParseBench.re  FullParseJson.re  IncrementalParseC.re  IncrementalParseJson.re  SyntaxBench.re  TestData.re  dune
bench.esy.lock/: index.json
bench/exe/: TreeSitterBench.re  dune
config/: discover.ml
esy.lock/: index.json
example/: TreeSitterExample.re  dune
example.esy.lock/: index.json
src/: ArrayParser.re  Languages.re  NativeTypes.re  Node.re  Parser.re  Parser.rei  Syntax.re  Tree.re  TreeSitter.re  TreeSitterScopes.re  TreeSitterScopes.rei  Types.re  bindings.c  dune
src/ScopeConverter/: C.re  Cpp.re  Javascript.re  Json.re  Python.re  Tsx.re  Typescript.re  dune
test/: ArrayParserTest.re  HelloWorldTest.re  NodeTest.re  ParserTest.re  ScopesAndAST.re  SyntaxTest.re  TreeSitterScopes.re  TreeSitterScopesTests.re  dune
test.esy.lock/: index.json
